--- a/style/css.css
+++ b/style/css.css
@@ -7,6 +7,7 @@ html {
 body, h1, h2, h3, p {
     margin: 0;
     padding: 0;
+    font-family: Lato, Helvetica, Arial, sans-serif;
 }
 
 /* Global styles */
@@ -18,9 +19,6 @@ body, h1, h2, h3, p {
   padding: 0;
 }
 
-body {
-  font-family: Lato, Helvetica, Arial, sans-serif;
-}
 
 a {
   color: inherit;
@@ -36,14 +34,33 @@ a {
                           Navbar
   ======================================================*/
 #navbar {
-  background: none;
-  position: fixed;
-  top: 0;
-  height: 60px;
-  line-height: 60px;
-  width: 140vw;
-  z-index: 10;
+  background: linear-gradient(to right, #54203e, #752a55);
+    overflow: visible;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
 }
+
+.nav-wrapper {
+    margin: auto;
+    text-align: center;
+    width: 70%;
+}
+
+@media(max-width: 768px) {
+    .nav-wrapper {
+        width: 90%;
+    }
+}
+
+@media(max-width: 638px) {
+    .nav-wrapper {
+        width: 100%;
+    }
+}
+
+/* Button styles */
 
 .bn3637 {
   display: inline-flex;
@@ -69,22 +86,6 @@ a {
 .bn36:hover {
   transform: perspective(1px) scale3d(1.044, 1.044, 1) translateZ(0) !important;
 }
-
-
-.nav-wrapper {
-  margin: auto;
-  
-  text-align: center;
-  width: 70%;
-} @media(max-width: 768px) {
-    .nav-wrapper {
-      width: 90%;
-    }
-  } @media(max-width: 638px) {
-      .nav-wrapper {
-        width: 100%;
-      }
-    } 
 
 
 .zoom {
@@ -886,7 +887,12 @@ h5 {
     margin-bottom: 0;
 }
 
-@media(min-width:768px) {
+/* Media Queries */
+
+
+@media (min-width: 768px) {
+    /* Styles for screens 768px and above */
+
     .timeline:before {
         left: 50%;
     }
@@ -923,7 +929,9 @@ h5 {
     }
 }
 
-@media(min-width:992px) {
+@media (min-width: 992px) {
+    /* Styles for screens 992px and above */
+
     .timeline>li {
         min-height: 150px;
     }
@@ -949,7 +957,9 @@ h5 {
     }
 }
 
-@media(min-width:1200px) {
+@media (min-width: 1200px) {
+    /* Styles for screens 1200px and above */
+
     .timeline>li {
         min-height: 170px;
     }
@@ -972,6 +982,7 @@ h5 {
         padding: 0 100px 20px 20px;
     }
 }
+
 
 
 .activities {
@@ -1027,6 +1038,10 @@ h5 {
 .contact-form button[type="submit"]:hover {
     background-color: #2980b9;
 }
+
+
+
+
 
 
 
