--- a/style/css.css
+++ b/style/css.css
@@ -887,89 +887,16 @@ h5 {
 
 /* Styles for screens 768px and above */
 @media (min-width: 768px) {
-    .layout:before {
-        left: 50%;
+    .layout {
+		width: 70%
     }
 
-    .layout>li {
-        margin-bottom: 20px;
-        min-height: 100px;
-    }
-
-    .layout>li .timeline-panel {
-        float: left;
-        width: 41%;
-        padding: 0 20px 20px 30px;
-        text-align: right;
-    }
-
-    .layout>li .timeline-image {
-        left: 50%;
-        width: 70px;
-        height: 70px;
-        margin-left: -35px;
-    }
-
-    .layout>li .timeline-image h4 {
-        margin-top: 16px;
-        font-size: 7px;
-        line-height: 18px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        float: right;
-        padding: 0 30px 20px 20px;
-        text-align: left;
-    }
-}
-
-@media (min-width: 992px) {
-    .timeline>li {
-        min-height: 150px;
-    }
-
-    .timeline>li .timeline-panel {
-        padding: 0 20px 20px;
-    }
-
-    .timeline>li .timeline-image {
-        width: 100px;
-        height: 100px;
-        margin-left: -50px;
-    }
-
-    .timeline>li .timeline-image h4 {
-        margin-top: 30px;
-        font-size: 18px;
-        line-height: 26px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 20px 20px;
-    }
+    
 }
 
 @media (min-width: 1200px) {
-    .timeline>li {
-        min-height: 170px;
-    }
-
-    .timeline>li .timeline-panel {
-        padding: 0 20px 20px 100px;
-    }
-
-    .timeline>li .timeline-image {
-        width: 120px;
-        height: 120px;
-        margin-left: -60px;
-    }
-
-    .timeline>li .timeline-image h4 {
-        margin-top: 40px;
-    }
-
-    .timeline>li.timeline-inverted>.timeline-panel {
-        padding: 0 100px 20px 20px;
+    .layout {
+		width: 100%
     }
 }
 
