--- a/style/css.css
+++ b/style/css.css
@@ -762,37 +762,7 @@ h5 { font-family: "lato", sans-serif;
   /* Keep your existing styles for larger screens here */
 }	
 	
-h6 {
-  font-family: "lato", sans-serif;
-  font-weight: 100;
-  font-size: 25px;
-  color: #d2e0e1;
-  padding: 10px 90px 10px 40px;
-}
 
-.post-item1 {
-	margin-left: auto;
-  margin-right: auto;
-	text-align: center;
-  border: 0px solid #ece357;
-  width: 900px;
-  height: 200px;
-  box-shadow: 1px 10px 40px 1px #f5e00f;
-  border-radius: 30px 30px;
-  padding: 80px 70px;
-  -webkit-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
-.post-item1:hover {
-
-  outline: 0px solid transparent;
-  
-  border: 0px solid #fd6000;
-  border-radius: 30px 30px;
-  box-shadow: 1px 10px 40px 1px #fd6000;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
 
 
 
@@ -813,7 +783,53 @@ h6 {
   transition: all 0.4s ease-in-out;
 }
 
+h6 {
+  font-family: "lato", sans-serif;
+  font-weight: 100;
+  font-size: 20px; /* Adjusted font size for mobile */
+  color: #d2e0e1;
+  padding: 10px 20px; /* Adjusted padding for mobile */
+}
 
+.post-item1 {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  border: 0px solid #ece357;
+  width: 80%; /* Adjusted width for mobile */
+  max-width: 900px; /* Added max-width for larger screens */
+  height: 200px;
+  box-shadow: 1px 10px 40px 1px #f5e00f;
+  border-radius: 30px;
+  padding: 40px; /* Adjusted padding for mobile */
+  transition: all 0.2s ease-in-out;
+}
+
+.post-item1:hover {
+  outline: 0px solid transparent;
+  border: 0px solid #fd6000;
+  border-radius: 30px;
+  box-shadow: 1px 10px 40px 1px #fd6000;
+  transition: all 0.5s ease-in-out;
+}
+
+/* Media query for mobile responsiveness */
+@media only screen and (max-width: 768px) {
+  h6 {
+    font-size: 18px; /* Further adjusted font size for mobile */
+    padding: 10px 15px; /* Further adjusted padding for mobile */
+  }
+
+  .post-item1 {
+    width: 90%; /* Further adjusted width for mobile */
+    padding: 30px; /* Further adjusted padding for mobile */
+  }
+}
+
+/* Media query for larger screens (desktop, tablet, etc.) */
+@media only screen and (min-width: 769px) {
+  /* Keep your existing styles for larger screens here */
+}
 
 h5 {
 	font-size: 30px;
